Images and other changes

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Fun, free flashcards for students and young learners of English that teach animal vocabulary from Els-ology.com">
-    <title>Esl-ology online animal flashcards</title>
+    <title>Esl-ology online sports flashcards</title>
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
@@ -18,7 +18,7 @@
         <h3 class="nav-bar__title">Esl-Ology.Com</h3>
         <div class="nav-bar__title-page">
       <img src="./img/Flag.png" alt="" class="nav-bar__title-page-deco">
-      <span class="nav-bar__title-page-main" id="pageTitle">Animal Flashcards</span>
+      <span class="nav-bar__title-page-main" id="pageTitle">Sports Flashcards</span>
       <img src="./img/Flag.png" alt="" class="nav-bar__title-page-deco">
     </div>
     <div class="nav-bar__links">
@@ -39,7 +39,7 @@
                 <div class="flashcard__flip-card">
                     <div class="flashcard__flip-card-inner" id="inner">
                         <div class="flashcard__flip-card-front" id="pics">
-                            <img src="img/cap.png" class="flashcard__art" id="art">
+                            <img src="img/archery.jpg" class="flashcard__art" id="art">
                         </div>
                         <div class="flashcard__flip-card-back">
                             <p id="flashcard__text">cap</p> 
@@ -75,7 +75,7 @@
           <p>© 2020 Copyright Esl-ology.com & copyright owners.</p>
           <p>Vectors & images
       by <a href="https://www.vecteezy.com">Vecteezy</a> and <a
-        href="https://unsplash.com">Unsplash </a>etc. Icons made by  <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a>. Photo credits<a href = "animal-flashcard-credits.html" target="_blank"> here</a></p>
+        href="Pixabay_Credits.html" target = "_blank">Pixabay Photographers (all credits here) </a>etc. Icons made by  <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a>.</p>
     </div>
     </footer>
 
